Changes for 0.4.4.RC4 try 2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.4.4.RC4 (2007/10/??)
+New in v0.4.4.RC4 (2007/10/26)
 ------------------------------
 WARNING:  COMMAND LINE CHANGES ARE NOT BACKWARDS COMPATIBLE!
 There is a new command line syntax to separate actions and
