--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,24 @@
+New in v0.4.4 (2007/11/23)
+------------------------------
+All the changes in RC1 through RC4 plus:
+
+Changes to ftpBackend to use a temp login config file rather
+than putting the username and password on the command line.
+This requires the use of NcFTP 3.1.9 or later.
+
+Thanks to a patch from Greg Hewgill the Amazon S3 backend now
+uses --num-retries to retry IO repeatedly if needed.
+
+Changes to commandline processing to allow non-ambiguous short
+strings for commands, i.e. 'i', 'inc', 'incr' for 'incremental',
+'f' for 'full', etc..  A warning message is printed if the short
+command is not unique.
+
+Applied a patch from Gregory Hartman to correct handling of DST
+in time calculations.  This affects backups made the night of
+a DST time switch.
+
+
 New in v0.4.4.RC4 (2007/10/26)
 ------------------------------
 WARNING:  COMMAND LINE CHANGES ARE NOT BACKWARDS COMPATIBLE!
