https://savannah.nongnu.org/bugs/index.php?21646 Fix to handling of collections when --archive-dir is used. Prior to this, duplicity would write the full sig files to both local and remote, then delete the remote.  Now, it does not delete the remote full sigs.
Applied the following patches from Peter Schuller
patch #6279, add command 'remove-all-but-n-full'
patch #6280, clarify --archive-dir option
patch #6281, --help should print to stdout, not stderr
patch #6282, collection-status: output in more consistent order

--- a/duplicity.1
+++ b/duplicity.1
@@ -39,6 +39,11 @@ duplicity \- Encrypted backup using rsync algorithm
 .BI [ options ]
 .I target_url
 
+.B duplicity remove-all-but-n-full
+.I count
+.BI [ options ]
+.I target_url
+
 .SH DESCRIPTION
 Duplicity incrementally backs up files and directory
 by encrypting tar-format volumes with GnuPG and uploading them to a
@@ -158,6 +163,15 @@ depend on them.  See the
 .B TIME FORMATS
 section for more information.  Note, this action cannot be combined
 with backup or other actions, such as cleanup.
+.TP
+.BI "remove-all-but-n-full " count
+Delete all backups sets that are older than the count:th last full
+backup (in other words, keep the last
+.I count
+full backups and associated incremental sets).
+.I count
+must be larger than zero. A value of 1 means that only the single most
+recent backup chain will be kept.
 .TP
 .B verify
 Enter verify mode instead of restore.  If the --file-to-restore option
