--- a/duplicity.1
+++ b/duplicity.1
@@ -407,6 +407,9 @@ noisiest).
 Change the volume size to 
 .IR number 
 Mb. Default is 5Mb.
+.TP
+.B --webdav-https
+Use https for the webdav-backend. The default is plain http.
 
 
 .SH TIME FORMATS
@@ -756,6 +759,11 @@ respectively.  If
 is used, these signatures will be stored both locally and remotely.
 The remote signatures will be encrypted if encryption is enabled.
 The local signatures will not be encrypted
+
+.SH ENVIRONMENT VARIABLES
+.IP TMPDIR,TEMP,TMP
+In decreasing order of importance, specifies the directory to use for
+temporary files (inherited from Python's tempfile module).
 
 .SH BUGS
 Hard links currently unsupported (they will be treated as non-linked
