more Changes for 0.4.6.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.4.6 (2007/11/??)
+New in v0.4.6 (2007/11/28)
 --------------------------
 https://savannah.nongnu.org/bugs/index.php?21508
 bug #21508: Change delete implementation of ftpBackend to 
