--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-New in v0.4.9 (2008/01/??)
+New in v0.4.9 (2008/01/04)
 --------------------------
 NOTE: URL format correction in rsync://.  The rsync backend
 now properly supports absolute and relative pathnames and 
