bug #23540: doc bug in man page (environment FTP_PASSWORD) https://savannah.nongnu.org/bugs/?23540

--- a/duplicity.1
+++ b/duplicity.1
@@ -131,7 +131,7 @@ given, the environment variable FTP_PASSWORD is read to determine the
 password:
 .PP
 .RS
-FTP_PASSWORD=mypassword; duplicity /local/dir ftp://user@other.host/some_dir
+FTP_PASSWORD=mypassword duplicity /local/dir ftp://user@other.host/some_dir
 
 .SH ACTIONS
 .TP
