patch #6589: S3 european bucket support https://savannah.nongnu.org/patch/index.php?6589

--- a/duplicity.1
+++ b/duplicity.1
@@ -346,6 +346,20 @@ the directory statistics file.
 .BI "--num-retries " number
 Number of retries to make on errors before giving up.
 .TP
+.BI "--s3-european-buckets"
+When using the Amazon S3 backend, create buckets in Europe instead of
+the default (requires
+.B --s3-use-new-style
+). Also see the
+.B EUROPEAN S3 BUCKETS
+section.
+.TP
+.BI "--s3-use-new-style"
+When operating on Amazon S3 buckets, use new-style subdomain bucket
+addressing. This is now the preferred method to access Amazon S3, but
+is not backwards compatible if your bucket name contains upper-case
+characters or other characters that are not valid in a hostname.
+.TP
 .BI "--scp-command " command
 This option only matters when using the ssh/scp backend.  The
 .I command
@@ -827,6 +841,41 @@ The local signatures will not be encrypted
 In decreasing order of importance, specifies the directory to use for
 temporary files (inherited from Python's tempfile module).
 
+.SH EUROPEAN S3 BUCKETS
+Amazon S3 provides the ability to choose the location of a bucket upon
+its creation. The purpose is to enable the user to choose a location
+which is better located network topologically relative to the user,
+because it may allow for faster data transfers.
+.PP
+duplicity will create a new bucket the first time a bucket access is
+attempted. At this point, the bucket will be created in Europe if
+.B --s3-european-buckets
+was given. For reasons having to do with how the Amazon S3 service
+works, this also requires the use of the
+.B --s3-use-new-style 
+option. This option turns on subdomain based bucket addressing in
+S3. The details are beyond the scope of this man page, but it is
+important to know that your bucket must not contain upper case letters
+or any other characters that are not valid parts of a
+hostname. Consequently, for reasons of backwards compatibility, use of
+subdomain based bucket addressing is not enabled by default.
+.PP
+Note that you will need to use
+.B --s3-use-new-style
+for all operations on European buckets; not just upon initial
+creation.
+.PP.
+You only need to use
+.B --s3-european-buckets
+upon initial creation, but you may may use it at all times for
+consistency.
+.PP
+Further note that when creating a new European bucket, it can take a
+while before the bucket is fully accessible. At the time of this
+writing it is unclear to what extent this is an expected feature of
+Amazon S3, but in practice you may experience timeouts, socket errors
+or HTTP errors when trying to upload files to your newly created
+bucket. Give it a few minutes and the bucket should function normally.
 .SH BUGS
 Hard links currently unsupported (they will be treated as non-linked
 regular files).
