bug #24731: Documentation error: "if... if" in remove-older-than paragraph https://savannah.nongnu.org/bugs/?24731

--- a/duplicity.1
+++ b/duplicity.1
@@ -163,7 +163,7 @@ the other hand if the archive has been deleted or corrupted, this
 command may not detect it.
 .TP
 .BI "remove-older-than " time
-Delete all backup sets older than the given time.  If old backup sets
+Delete all backup sets older than the given time.  Old backup sets
 will not be deleted if backup sets newer than
 .I time
 depend on them.  See the 
